# skill-mark2-audio-receiver

./: .gitignore  .projenrc.py  CHANGELOG.md  README.md  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  skill.json  test.py
.github/workflows/: Dockerfile  propose_release.yml  publish_alpha.yml  skill_tests.yml  systemd-tests.yml
locale/en-us/: acknowledge.dialog  pair-kde-connect.intent  rename-bluetooth.intent  rename-kde-connect.intent
locale/en-us/intents/: rename-spotify.intent
skill_mark2_audio_receiver/: __init__.py  pair.py  rename.py  systemd.py
skill_mark2_audio_receiver/locale/en-us/intents/: check-service-status.intent  disable-kde-connect.intent  enable-kde-connect.intent  pair-bluetooth.intent  rename-airplay.intent
skill_mark2_audio_receiver/scripts/: bluetooth-autopair.sh  kdeconnect-autopair.sh
skill_markII_audio_receiver/: __init__.py  settingsmeta.yaml  version.py
skill_markII_audio_receiver/locale/en-us/intents/: check-service-status.intent  pair-bluetooth.intent  pair-kde-connect.intent
test/: test_intents.yaml
test/Integration/: integration.py
test/__snapshots__/: test_systemd.ambr
tests/: test_example.py  test_intents.yaml  test_pair.py  test_rename.py  test_resources.yaml  test_systemd.py
tests/Integration/: integration.py
