[tool.poetry]
name = "skill-mark2-audio-receiver"
version = "0.1.0"
description = ""
authors = ["Mike Gray <mike@graywind.org>"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["Neon", "devicecontrol", "spotify", "kdeconnect", "airplay", "bluetooth", "mark2", "audio", "cast"]
packages = [{include = "skill_mark2_audio_receiver"}]

[tool.poetry.dependencies]
python = "^3.7"
ovos-bus-client = "^0.0.5"
ovos-utils = "^0.0.35"
ovos-workshop = "^0.0.12"

[tool.poetry.group.dev.dependencies]
projen = "^0.72.2"
pytest = "^7.4.0"
pytest-codecov = "^0.5.1"
ovos-plugin-manager = "^0.0.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
